# debian-workbench

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: rust.yml
debian-analyzer/: Cargo.toml  README.md  build.rs
debian-analyzer/src/: debbugs.rs  debhelper.rs  key_package_versions.rs  lib.rs  popcon.rs  rdeps.rs  snapshot.rs  wnpp.rs
debian-workbench/: Cargo.toml  README.md
debian-workbench/src/: config.rs  control.rs  debhelper.rs  editor.rs  lib.rs  lintian.rs  maintscripts.rs  publish.rs  relations.rs  release_info.rs  rules.rs  vcs.rs
src/: abstract_control.rs  architecture.rs  changelog.rs  config.rs  control.rs  debbugs.rs  debcargo.rs  debhelper.rs  detect_gbp_dch.rs  editor.rs  lib.rs  maintainers.rs  patches.rs  popcon.rs  publish.rs  relations.rs  release_info.rs  rules.rs  snapshot.rs  udd.rs  vcs.rs  vcswatch.rs  wnpp.rs
