[package]
name = "debian-analyzer"
version = "0.159.4"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2021"
license = "GPL-2.0+"
description = "Debian analyzer"
repository = "https://github.com/jelmer/debian-analyzer"
homepage = "https://github.com/jelmer/debian-analyzer"
documentation = "https://docs.rs/debian-analyzer"

[dependencies]
pyo3 = { version = ">=0.25, <0.28", features = ["serde", "chrono"] }
debversion = { version = ">=0.4.0", features = ["serde", "python-debian"] }
log = "0.4"
lazy-regex = "3"
serde = { version = "1", features = ["derive"] }
breezyshim = { version = "0.7.0", features = ["debian", "dirty-tracker"] }
configparser = "3"
clap = { version = "4,<5", features = ["derive", "env", "suggestions", "cargo", "string"], optional = true }
env_logger = { version = ">=0.10", optional = true }
serde_json = "1"
chrono = { version = ">=0.4", features = ["serde"] }
distro-info = { version = ">=0.4.0" }
url = "2"
tempfile = "3"
maplit = "1.0.2"
lazy_static = "1"
debian-changelog = "0.2"
debian-control = ">=0.1.37"
debian-copyright = ">=0.1.26"
makefile-lossless = "0.2.0"
patchkit = "0.2.1"
dep3 = "0.1.0"
reqwest = { version = ">=0.11", features = ["blocking", "json"] }
merge3 = { version = "0.2", optional = true }
difflib = "0.4.0"
deb822-lossless = "0.4"
toml_edit = ">=0.23"
semver = "1"
sqlx = { version = ">=0.8", optional = true, features = ["postgres"] }
filetime = "0.2"
sha1 = "0.10.6"
hex = "0.4.3"
svp-client = { version = "0.2.0", optional = true }

[features]
svp = ["dep:svp-client"]
default = ["python", "merge3"]
python = []
cli = ["dep:clap", "dep:env_logger"]
merge3 = ["dep:merge3"]
udd = ["dep:sqlx"]

[lib]

[[bin]]
name = "detect-changelog-behaviour"
path = "src/bin/detect-changelog-behaviour.rs"
required-features = ["cli"]

[[bin]]
name = "deb-vcs-publish"
path = "src/bin/deb-vcs-publish.rs"
required-features = ["cli"]

[build-dependencies]
quote = "1.0.37"
serde_json = "1"

[dev-dependencies]
serial_test = ">=2"
