[package]
name = "debian-analyzer"
version = "0.160.12"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2021"
license = "GPL-2.0+"
description = "Debian project analyzer"
repository = "https://github.com/jelmer/debian-analyzer"
homepage = "https://github.com/jelmer/debian-analyzer"
documentation = "https://docs.rs/debian-analyzer"

[dependencies]
log = "0.4.18"
lazy_static = "1.5"
maplit = "1.0.2"
url = "2.4"
reqwest = { version = ">=0.12.10, <0.13", features = ["blocking", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
chrono = { version = "0.4.42", features = ["serde"] }
debversion = { version = ">=0.5.0, <0.6", features = ["serde"] }
sha1 = "0.10.6"
hex = "0.4.3"
sqlx = { version = ">=0.8, <0.9", optional = true, features = ["postgres", "runtime-tokio-native-tls"] }

[features]
default = []
udd = ["dep:sqlx"]

[build-dependencies]
quote = "1.0.40"
serde_json = "1.0.85"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
