[package]
name = "debian-workbench"
version = "0.2.0"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>"]
edition = "2021"
license = "GPL-2.0+"
description = "Debian workbench"
repository = "https://github.com/jelmer/debian-analyzer"
homepage = "https://github.com/jelmer/debian-analyzer"
documentation = "https://docs.rs/debian-workbench"

[dependencies]
pyo3 = { version = ">=0.27, <0.28", features = ["serde", "chrono"] }
debversion = { version = ">=0.5.0, <0.6", features = ["serde", "python-debian"] }
log = "0.4.18"
lazy-regex = "3.4"
serde = { version = "1.0.145", features = ["derive"] }
breezyshim = { version = ">=0.7.1, <0.8", features = ["debian", "dirty-tracker"] }
configparser = "3"
clap = { version = "4,<5", features = ["derive", "env", "suggestions", "cargo", "string"], optional = true }
env_logger = { version = ">=0.10, <0.12", optional = true }
serde_json = "1.0.85"
chrono = { version = "0.4.42", features = ["serde"] }
distro-info = { version = ">=0.4.0, <0.5" }
url = "2.4"
tempfile = "3.20"
lazy_static = "1.5"
debian-changelog = "0.2.10"
debian-control = ">=0.2.17, <0.3"
debian-copyright = ">=0.1.40, <0.2"
makefile-lossless = ">=0.3.18, <0.4"
patchkit = ">=0.2.2, <0.3"
dep3 = { version = ">=0.2.0, <0.3", features = ["lossless"] }
reqwest = { version = ">=0.12.10, <0.13", features = ["blocking", "json"] }
merge3 = { version = "0.2", optional = true }
difflib = "0.4.0"
deb822-lossless = ">=0.5.8, <0.6"
toml_edit = ">=0.23, <0.24"
semver = "1"
filetime = "0.2.10"
svp-client = { version = "0.2.0", optional = true }
regex = "1.12.2"
debian-watch = ">=0.2.20, <0.3"
debian-analyzer = { path = "../debian-analyzer", version = "0.160", optional = true }

[features]
svp = ["dep:svp-client"]
default = ["python", "merge3"]
python = []
cli = ["dep:clap", "dep:env_logger"]
merge3 = ["dep:merge3"]
debian = ["dep:debian-analyzer"]

[lib]

[[bin]]
name = "detect-changelog-behaviour"
path = "src/bin/detect-changelog-behaviour.rs"
required-features = ["cli"]

[[bin]]
name = "deb-vcs-publish"
path = "src/bin/deb-vcs-publish.rs"
required-features = ["cli"]

[dev-dependencies]
serial_test = ">=3, <4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
